# dotquery

./: README.md  pyproject.toml  readme2.md
src/dotquery/: cli.py  core.py  dsl.py  queryset.py
